fix: tables have small padding and removed table header padding to better align content

--- a/src/app/components/dialogs/costEffectivenessSelectionDialog/costEffectivenessSelectionDialog.component.scss
+++ b/src/app/components/dialogs/costEffectivenessSelectionDialog/costEffectivenessSelectionDialog.component.scss
@@ -36,5 +36,5 @@ mat-form-field {
 }
 
 .result-wrapper {
-  margin: 5px 0 5px 0;
+  margin: 10px 0 5px 0;
 }
