--- a/src/app/pages/quickMaps/pages/costEffectiveness/components/intervention/intervention.component.scss
+++ b/src/app/pages/quickMaps/pages/costEffectiveness/components/intervention/intervention.component.scss
@@ -34,7 +34,7 @@
   width: 50%;
   display: flex;
   flex-direction: row-reverse;
-  align-items: end;
+  align-items: flex-end;
 }
 
 .item-container {
